Completed Tasks: 1) Add Carpet Cleaning Project.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,15 @@
             </div>
           </div>
 
+          <div class="card">
+            <img src="carpet.jpg" alt="Your Work Image">
+            <div class="card-overlay">
+              <h2>Carpet Cleaning</h2>
+              <p> This project is about Carpet Cleaning and consists of four classes: product, customer, worker, and admin. Workers can add, search, delete, and get the number of products. They can also add, search, and delete customers, generate reports containing cleaning place statistics, track orders, apply discounts for customers, generate invoices, display order statuses, and send emails to customers when orders are completed. The admin can add, search, delete, update, and distribute workers for products.</p>
+              <br>
+              <a href="https://github.com/AbdullahSholi/Software-Engineering-Course-Project.git" target="_blank">View on GitHub</a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="contact-me" id="contact-me">
